add monitor & config for mobile bert

--- a/config_examples/mobilebert/6.j2
+++ b/config_examples/mobilebert/6.j2
@@ -47,12 +47,12 @@ hierarchical_config:
       aggregate: true
       routing_patterns:  
         INPUT:  
-          port_groups: [[0,1,2,3,4,5,6,7]]
+          port_groups: [[0,1,2,3]]
         WEIGHT:  
-          port_groups: [[0], [1], [2], [3], [4], [5], [6], [7]]
-          forward_count: 2  
+          port_groups: [[0],[1],[2],[3]]
+          forward_count: 1  
         OUTPUT:  
-          port_groups: [[0,1,2,3,4,5,6,7]]
+          port_groups: [[0],[1],[2],[3]]
 
     # Level 2: DISTRIBUTOR (对应 8x12 中的 "12" 这一维 - 日志来源层)
     - level: 2
@@ -60,7 +60,7 @@ hierarchical_config:
       buffer_size: 0 # 维持您提供的buffer配置
       roles: "ROLE_DISTRIBUTOR"
       bandwidth: 128
-      fanouts: 16
+      fanouts: 12
       aggregate: true
       routing_patterns:  
         
@@ -68,29 +68,25 @@ hierarchical_config:
         # 每个数据包只发送给唯一的 PE
         WEIGHT:  
           port_groups: [
-            [0],[1],[2],[3],[4],[5],[6],[7],[8],[9],[10],[11],[12],[13],[14],[15]
+            [0,1],
+            [2,3],
+            [4,5],
+            [6,7]
           ]
           
         # pv=1 (INPUT): 日志显示 num_matches=4, 且索引跨度为3 (如0,3,6,9) -> 交错多播
         # 数据被多播到间隔为3的4个PE上
         INPUT:  
           port_groups: [
-            [1,3,5,7,9,11,13,15],
-            [0,2,4,6,8,10,12,14]
+            [0,2,4,6],
+            [1,3,5,7]
           ]
             
         # pv=2 (OUTPUT): 日志显示 num_matches=3, 且索引连续 (如0,1,2) -> 块状多播
         # 数据被多播/收集自连续的3个PE
         OUTPUT:  
           port_groups: [
-            [0,1],
-            [2,3],
-            [4,5],
-            [6,7],
-            [8,9],
-            [10,11],
-            [12,13],
-            [14,15]
+            [0],[1],[2],[3],[4],[5],[6],[7]
           ]
       
     # Level 3: COMPUTE (PE)
@@ -104,68 +100,74 @@ hierarchical_config:
 workload:
   working_set:
     - role: "ROLE_DRAM"
-      outputs_required_count: 17792
+      outputs_required_count: 128
       data:
-        - { data_space: "Weights", size: 65536, reuse_strategy: "resident" }
-        - { data_space: "Inputs", size: 71168, reuse_strategy: "resident" }
-        - { data_space: "Outputs", size: 17792, reuse_strategy: "resident" }
+        - { data_space: "Weights", size: 4448, reuse_strategy: "resident" }
+        - { data_space: "Inputs", size: 556, reuse_strategy: "resident" }
+        - { data_space: "Outputs", size: 128, reuse_strategy: "resident" }
     - role: "ROLE_GLB"
-      outputs_required_count: 35584
+      outputs_required_count: 128
       data:
         - { data_space: "Weights", size: 0, reuse_strategy: "resident" }
-        - { data_space: "Inputs", size: 35584, reuse_strategy: "resident" }
-        - { data_space: "Outputs", size: 17792, reuse_strategy: "resident" }
+        - { data_space: "Inputs", size: 556, reuse_strategy: "resident" }
+        - { data_space: "Outputs", size: 128, reuse_strategy: "resident" }
     - role: "ROLE_BUFFER"
       outputs_required_count: 0
       data:
-        - { data_space: "Weights", size: 128, reuse_strategy: "temporal" }
-        - { data_space: "Inputs",  size: 8, reuse_strategy: "temporal" }
-        - { data_space: "Outputs", size: 16, reuse_strategy: "temporal" }
+        - { data_space: "Weights", size: 2, reuse_strategy: "temporal" }
+        - { data_space: "Inputs",  size: 2, reuse_strategy: "temporal" }
+        - { data_space: "Outputs", size: 4, reuse_strategy: "temporal" }
 
   data_flow_specs:
     - role: "ROLE_DRAM"
       properties:
         sync_per_timestep: 0
       schedule_template:
-        total_timesteps: 2
+        total_timesteps: 1
         delta_events:
           - trigger: { on_timestep: "fallback" }
             name: "INITIAL_LOAD_DRAM_TO_GLB"
             delta:
-              - { data_space: "Weights", size: 128 ,target_role: "ROLE_BUFFER" }
-              - { data_space: "Weights", size: 128 ,target_role: "ROLE_BUFFER" }
-              - { data_space: "Inputs",  size: 35584 ,target_role: "ROLE_GLB" }
-              - { data_space: "Outputs", size: 17792 ,target_role: "ROLE_GLB" }
+              {%- for i in range(139) %}
+              - { data_space: "Weights", size: 2, target_role: "ROLE_BUFFER" }
+              {%- endfor %}
+              - { data_space: "Inputs",  size: 556 ,target_role: "ROLE_GLB" }
+              - { data_space: "Outputs", size: 128 ,target_role: "ROLE_GLB" }
 
     - role: "ROLE_GLB"
       properties:
         sync_per_timestep: 0
       schedule_template:
-        total_timesteps: 278
+        total_timesteps: 139
         delta_events:
+          - trigger: {on_timestep_modulo: [139,0]}
+            name: "INITIAL_LOAD_GLB_TO_BUFFER"
+            delta:
+              - { data_space: "Inputs",  size: 2,target_role: "ROLE_BUFFER" }
+              - { data_space: "Outputs", size: 4, target_role: "ROLE_BUFFER" }
           - trigger: { on_timestep: "fallback" }
             name: "MULTICAST_FILL_INPUTS"
             delta:
-              - { data_space: "Inputs",  size: 8,target_role: "ROLE_BUFFER" }
-              - { data_space: "Outputs", size: 16, target_role: "ROLE_BUFFER" }
+              - { data_space: "Inputs",  size: 2,target_role: "ROLE_BUFFER" }
+              - { data_space: "Outputs", size: 0, target_role: "ROLE_BUFFER" }
      
       command_definitions:
         - command_id: 0
           name: "PROCESS_FULL_CONTEXT"
-          evict_payload: { Weights: 0, Inputs: 35584, Outputs: 0 }
+          evict_payload: { Weights: 0, Inputs: 556, Outputs: 128 }
 
     - role: "ROLE_BUFFER"
       properties:
-        compute_latency: 128
-        eviction_interval_cycles: 139
-        weight_eviction_amount: 128
+        compute_latency: 4
+        eviction_interval_cycles: 1
+        weight_eviction_amount: 2
       schedule_template:
         total_timesteps: 1
         delta_events: []
       command_definitions:
         - command_id: 0
           name: "PROCESS_DELTA"
-          evict_payload: { Weights: 0, Inputs: 8, Outputs: 16 }
+          evict_payload: { Weights: 0, Inputs: 2, Outputs: 0 }
 
 buffer_depth: 8 # <--- [建议修改] 稍微调大一点，避免初始调试时因缓冲区太小而产生干扰
 # size of flits, in bits
